add final button to pop up image and styling.

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,10 @@ img {
   text-align: center;
 }
 
+.centered-Paragraph {
+  text-align: center;
+  color: green;
+  font-size: 200;
+  font-style: italic
+}
+
